hpcc4j-358 Fixed deprecated Constructors (#447)
Signed-off-by: Michael Gardner <Michael.Gardner@lexisnexisrisk.com>
Signed-off-by: Michael Gardner <michael.gardner@lexisnexisrisk.com>

Co-authored-by: Michael Gardner <Michael.Gardner@lexisnexisrisk.com>